Menambahkan file Kernel.php untuk konfigurasi middleware
